--- a/Library Management System/Properties/Resources.resx
+++ b/Library Management System/Properties/Resources.resx
@@ -121,9 +121,6 @@
   <data name="addstudent7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bookslists2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\bookslists2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Bean Eater-1s-77px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\Bean Eater-1s-77px.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,20 +136,14 @@
   <data name="icons8-add-user-male-501" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-add-user-male-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="addstudent4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="login-pass" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\login-pass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="addstudent1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-student-male-1004" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-student-male-100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-book-philosophy-501" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\icons8-book-philosophy-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Dashboardnew" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\Dashboardnew.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-book-philosophy-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-book-philosophy-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -163,17 +154,17 @@
   <data name="icons8-books-502" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-books-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-view-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\icons8-view-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="icons8-return-book-501" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-return-book-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hashtag-trending" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\hashtag-trending.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="login-user1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\login-user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="addstudent3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-books-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\icons8-books-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="view book gif" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\view book gif.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -184,8 +175,14 @@
   <data name="booklist" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\booklist.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user_demo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\users phots's\user_demo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8-student-male-10001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-student-male-1000.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="add book" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\add book.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Ellipsis-1s-237px2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\Ellipsis-1s-237px.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -196,20 +193,26 @@
   <data name="listofmembers" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\listofmembers.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="userprofilerefresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\userprofilerefresh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="issueBook1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\issueBook.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-exit-sign-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\icons8-exit-sign-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="login-user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\login-user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\search.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-student-male-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\icons8-student-male-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="listofbooksreadedNEW" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\listofbooksreadedNEW.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-student-male-10003" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\icons8-student-male-1000.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="search1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\search1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="books_library_shelves_138556_1920x1080" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\books_library_shelves_138556_1920x1080.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,8 +220,8 @@
   <data name="login-pass2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\login-pass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\search1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-book-philosophy-501" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\icons8-book-philosophy-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-student-male-1001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-student-male-100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -232,11 +235,8 @@
   <data name="listofbooksreaded" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\listofbooksreaded.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Ellipsis-1s-237px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\Ellipsis-1s-237px.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="addstudent3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bookslists2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\bookslists2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="addstudent2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -256,14 +256,17 @@
   <data name="list of books" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\list of books.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="addstudent4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="list of books1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\list of books.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-add-user-male-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-add-user-male-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-books-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\icons8-books-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="search" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\search.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="addstudent5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\addstudent.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -283,28 +286,28 @@
   <data name="icons8-student-male-1002" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-student-male-100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="add book" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\add book.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-student-male-10003" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\icons8-student-male-1000.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="booklist1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\booklist1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Dashboardnew" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\Dashboardnew.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ellipsis-1s-237px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\Ellipsis-1s-237px.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-student-male-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\icons8-student-male-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hashtag-trending" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\hashtag-trending.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user_demo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\users phots's\user_demo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-view-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\icons8-view-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8-add-book-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon and imgs\icons8-add-book-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8-exit-sign-50" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\icons8-exit-sign-50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="login-pass" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\login-pass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="userprofilerefresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icon and imgs\userprofilerefresh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-student-male-100 new" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icon and imgs\icons8-student-male-100 new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
